@@ -15,10 +15,10 @@ import javax.annotation.Nullable;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URLConnection;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
-import java.util.Objects;
+
+import static java.util.Objects.requireNonNull;
+import static org.springframework.util.MimeType.valueOf;
 
 /**
  * @author Mikk Tarvas
@@ -28,21 +28,21 @@ import java.util.Objects;
 public class MimeTypeDetector {
 
   // If we can not detect mime type, fall back to binary stream
-  private static final MimeType DEFAULT_MIME_TYPE = MimeType.valueOf("application/octet-stream");
+  private static final MimeType DEFAULT_MIME_TYPE = valueOf("application/octet-stream");
 
   private static final Map<String, MimeType> EXTENSION_TYPE_MAP;
 
   static {
-    Map<String, MimeType> extensionTypeMap = new HashMap<>();
-    extensionTypeMap.put("txt", MimeType.valueOf("text/plain"));
-    extensionTypeMap.put("doc", MimeType.valueOf("application/msword"));
-    extensionTypeMap.put("docx", MimeType.valueOf("application/vnd.openxmlformats-officedocument.wordprocessingml.document"));
-    extensionTypeMap.put("htm", MimeType.valueOf("text/html"));
-    extensionTypeMap.put("html", MimeType.valueOf("text/html"));
-    extensionTypeMap.put("pdf", MimeType.valueOf("application/pdf"));
-    extensionTypeMap.put("rtf", MimeType.valueOf("application/rtf"));
-    extensionTypeMap.put("odt", MimeType.valueOf("application/vnd.oasis.opendocument.text"));
-    EXTENSION_TYPE_MAP = Collections.unmodifiableMap(extensionTypeMap);
+    EXTENSION_TYPE_MAP = Map.of(
+      "txt", valueOf("text/plain"),
+      "doc", valueOf("application/msword"),
+      "docx", valueOf("application/vnd.openxmlformats-officedocument.wordprocessingml.document"),
+      "htm", valueOf("text/html"),
+      "html", valueOf("text/html"),
+      "pdf", valueOf("application/pdf"),
+      "rtf", valueOf("application/rtf"),
+      "odt", valueOf("application/vnd.oasis.opendocument.text")
+    );
   }
 
   private final Detector tikaDetector;
@@ -54,7 +54,7 @@ public class MimeTypeDetector {
 
   @Nonnull
   public MimeType detect(@Nonnull InputStream is, @Nullable String name) throws IOException {
-    Objects.requireNonNull(is);
+    requireNonNull(is);
 
     MimeType fromInputStream = detectFromInputStream(is, name);
     if (isAcceptable(fromInputStream)) return fromInputStream;
@@ -122,7 +122,7 @@ public class MimeTypeDetector {
   private MimeType parseMimeType(String mimeType) {
     if (mimeType == null) return null;
     try {
-      return MimeType.valueOf(mimeType);
+      return valueOf(mimeType);
     } catch (Exception ex) {
       return null;
     }
